# ShoppingAssistantBackend

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
director/: urls.py  views.py
director/static/: base.css
shoppingAssistantBackend/: asgi.py  settings.py  urls.py  wsgi.py
templates/: go.html
