[tool.poetry]
name = "shoppingassistantbackend"
version = "0.1.0"
description = ""
authors = ["Mohammadmahdi Faryabi <faryabimm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
django = "^5.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
